--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,7 @@
 pytest==3.0.6
 pytest-localserver==0.3.7
 pytest-logging==2015.11.4
-pyOpenSSL==17.3.0
+pyopenssl==17.5.0
 unittest2==1.1
 coverage==3.7.1
 coveralls==1.1
